Update brand section styles and revise content
Changed background colors in the brands and mockup sections to use --default-black for improved visual consistency. Updated the brands section subtitle in index.html and relocated the services section to follow the portfolio section, maintaining its content and layout.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <!-- Section Title -->
         <div class="section-title text-center mb-5">
           <h2>Brands</h2>
-          <div><span>Trusted by </span> <span class="description-title">Industry Leaders</span></div>
+          <div><span>Some of </span> <span class="description-title">Our Clients</span></div>
         </div><!-- End Section Title -->
 
         <!-- Brands Carousel -->
@@ -260,157 +260,6 @@
       <!-- Progress Indicator -->
       <div class="progress-hint">Scroll to explore the app</div>
     </section><!-- /Mobile Mockup Section -->
-
-    <!-- Services Section -->
-    <section id="services" class="services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <div><span>The Fooliz </span> <span class="description-title">Menu</span></div>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="service-header">
-          <div class="row align-items-center">
-            <div class="col-lg-8 col-md-12">
-              <div class="service-intro">
-                <h2 class="service-heading">
-                  <div>Hand Crafted Brands,</div>
-                  <div><span>Engineered Apps</span></div>
-                </h2>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12">
-              <div class="service-summary">
-                <p>
-                  From building apps to branding the venture, we design, and engineer solutions built for impact.
-                  Websites, strategy, content, and UX all crafted to function and help your systems run smoothly.
-                </p>
-                <!-- <a href="#contact" class="service-btn">
-                  book a service
-                  <i class="bi bi-arrow-right"></i>
-                </a> -->
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-center">
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <img src="assets/img/services/mobile.gif" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <div class="content-area">
-                <h3>
-                  <a>
-                    Mobile Apps <span>Development</span>
-                  </a>
-                </h3>
-                <p>
-                  Curated apps designed to function, scale, and engage.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <img src="assets/img/services/website.gif" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <div class="content-area">
-                <h3>
-                  <a>
-                    Website<span> Development</span>
-                  </a>
-                </h3>
-                <p>
-                  Need a fast, responsive website built to impress and convert? We got you!
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <img src="assets/img/services/branding.gif" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <div class="content-area">
-                <h3>
-                  <a>
-                    Branding<span> & Identity Design</span>
-                  </a>
-                </h3>
-                <p>
-                  Brand identities that function and give you a strong identification (Visually & Strategically).
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <img src="assets/img/services/marketing.gif" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <div class="content-area">
-                <h3>
-                  <a>
-                    Content<span> Marketing & Management</span>
-                  </a>
-                </h3>
-                <p>
-                  Engaging content tailored for your audience and to make you stand strong in social media spaces.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <img src="assets/img/services/ui-ux.gif" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <div class="content-area">
-                <h3>
-                  <a>
-                    UI & UX <span>Design</span>
-                  </a>
-                </h3>
-                <p>
-                  Clean and functional interfaces based on design thinking and strategy.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <img src="assets/img/services/content-strategy.gif" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <div class="content-area">
-                <h3>
-                  <a>
-                    AI Content<span> Strategy</span>
-                  </a>
-                </h3>
-                <p>
-                  A bigger scale understanding of what to post and what to not taking deep care of your brand tone.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </section><!-- /Services Section -->
 
     <!-- Testimonials Section 
     <section id="testimonials" class="testimonials section light-background">
@@ -1363,6 +1212,157 @@
       </div>
 
     </section><!-- /Portfolio Section -->
+
+     <!-- Services Section -->
+    <section id="services" class="services section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Services</h2>
+        <div><span>The Fooliz </span> <span class="description-title">Menu</span></div>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="service-header">
+          <div class="row align-items-center">
+            <div class="col-lg-8 col-md-12">
+              <div class="service-intro">
+                <h2 class="service-heading">
+                  <div>Hand Crafted Brands,</div>
+                  <div><span>Engineered Apps</span></div>
+                </h2>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-12">
+              <div class="service-summary">
+                <p>
+                  From building apps to branding the venture, we design, and engineer solutions built for impact.
+                  Websites, strategy, content, and UX all crafted to function and help your systems run smoothly.
+                </p>
+                <!-- <a href="#contact" class="service-btn">
+                  book a service
+                  <i class="bi bi-arrow-right"></i>
+                </a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/services/mobile.gif" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Mobile Apps <span>Development</span>
+                  </a>
+                </h3>
+                <p>
+                  Curated apps designed to function, scale, and engage.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/services/website.gif" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Website<span> Development</span>
+                  </a>
+                </h3>
+                <p>
+                  Need a fast, responsive website built to impress and convert? We got you!
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/services/branding.gif" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Branding<span> & Identity Design</span>
+                  </a>
+                </h3>
+                <p>
+                  Brand identities that function and give you a strong identification (Visually & Strategically).
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/services/marketing.gif" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Content<span> Marketing & Management</span>
+                  </a>
+                </h3>
+                <p>
+                  Engaging content tailored for your audience and to make you stand strong in social media spaces.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/services/ui-ux.gif" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    UI & UX <span>Design</span>
+                  </a>
+                </h3>
+                <p>
+                  Clean and functional interfaces based on design thinking and strategy.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/services/content-strategy.gif" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    AI Content<span> Strategy</span>
+                  </a>
+                </h3>
+                <p>
+                  A bigger scale understanding of what to post and what to not taking deep care of your brand tone.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /Services Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
