Add small laptop responsive styles and update bio
Introduced detailed CSS rules for small laptop screens (801px-1024px) across header, hero, about, brands, services, portfolio, pricing, FAQ, and contact sections for improved responsiveness. Updated Muzna Farid's bio in index.html for clarity and style.

--- a/index.html
+++ b/index.html
@@ -2042,7 +2042,7 @@
               <div class="member-info flex-grow-1">
                 <h4>Muzna Farid</h4>
                 <span>Associate Designer</span>
-                <p>I transform abstract concepts into compelling visual designs.</p>
+                <p>I transform abstract concepts and ideas into compelling visuals and artistic designs that look cool.</p>
                 <div class="social">
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-twitter-x"></i></a>
