--- a/index.html
+++ b/index.html
@@ -2042,7 +2042,7 @@
               <div class="member-info flex-grow-1">
                 <h4>Muzna Farid</h4>
                 <span>Associate Designer</span>
-                <p>I transform abstract concepts and ideas into compelling visuals and artistic designs that look cool.</p>
+                <p>I transform abstract concepts and ideas into compelling visuals and artistic designs.</p>
                 <div class="social">
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -2629,9 +2629,9 @@
           <h4>Useful Links</h4>
           <ul>
             <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About us</a></li>
             <li><a href="#team">Team</a></li>
           </ul>
         </div>
@@ -2640,11 +2640,11 @@
           <h4>Our Services</h4>
           <ul>
             <li>Mobile Apps Development</li>
-            <li>Websites Development</li>
+            <li>Website Development</li>
             <li>Branding & Identity Design</li>
             <li>Content Marketing & Management</li>
             <li>UI & UX Design</li>
-            <li>Content Strategy</li>
+            <li>AI Content Strategy</li>
           </ul>
         </div>
 
